--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body, html {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    color: white;
+    color: rgb(255, 255, 255);
     text-align: center;
 }
 
